fix responsvi table wrap empty

--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -37,6 +37,9 @@
   display: inline-block;
 }
 
+.table-wrap {
+  overflow: hidden;
+}
 .table-wrap .text-warning {
   display: none;
 }
@@ -69,12 +72,12 @@
 
 /* MOBILE */
 @media only screen and (max-width: 600px) {
-  .table-wrap {
+  .table-wrap:not(.__empty) {
     overflow-x: auto;
     white-space: nowrap;
   }
 
-  .table-wrap .table {
+  .table-wrap:not(.__empty) .table {
     width: auto;
     min-width: 100%;
   }
